--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,28 @@
     width: 30%;
     margin-left: 35%;
 }
+.itemcard{
+    align-items: center;
+    height: 200px;
+    width: 90%;
+    margin-left: 5%;
+    border-color: #F07900;
+}
+.itemicon{
+    margin-left: 5%;
+    font-size: 220%;
+
+}
+#items{
+    margin-top: 30px;
+    border: #F07900 1px solid;
+    padding: 3px;
+    width: 35%;
+    align-items: center;
+    margin-left: 35%;
+    height: 170px;
+}
+
 *{
 
     color: #F07900;
