--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,7 @@
 }
 .itemicon{
     margin-left: 5%;
-    font-size: 170%;
-
+    font-size: 170%
 }
 #items{
     margin-top: 30px;
@@ -24,6 +23,7 @@
     align-items: center;
     margin-left: 35%;
     height: fit-content;
+   
 }
 
 *{
@@ -57,7 +57,6 @@
 
 #deleteButton{
     margin-left: 150px;
-    margin-bottom: 10px;
     height: 30px;
 }
 #note-body{
